--- a/persistent_storage/jupyterhub/templates/home.html
+++ b/persistent_storage/jupyterhub/templates/home.html
@@ -18,21 +18,22 @@
 {% set projects = user.spawner.get_state_field('projects') %}
 
 {% block main %}
-{% if projects %}
 <div class="container">
-  <div>
-    <h4>Your Projects</h4>
-    <div>NOTE: User has to go to https://notebooks-test.gesis.org/services/binder/
-        and confirm that Binder service can identify the user with user's JupyterHub account.
-        (A service is attempting to authorize with your JupyterHub account)<br>
-        Otherwise nothing works in this page.
+  <div id="projects-container">
+    {% block binder_header %}
+    <div id="header" class="text-center" style="border-bottom: 0; padding-bottom: 0;">
+{#      <h3>Turn a Git repo into a collection of interactive notebooks</h3>#}
+      <div id="explanation" style="font-weight: normal;">
+        Have a Binder-Ready repository? With GESIS Notebooks, turn this repository into a persistent Jupyter environment, allowing you to continue your work from anywhere at any time.
+      </div>
     </div>
+    {% endblock binder_header %}
+    <h4>Your Projects</h4>
     <div class="table-responsive">
-     <table id="your-projects" class="table table-striped">
+     <table id="your-projects" class="table table-striped{% if not projects %} hidden{% endif %}">
          <thead>
          <tr>
              <th>Repository</th>
-{#             <th>URL</th>#}
              <th>Commit</th>
              <th>Last used</th>
              <th>Actions</th>
@@ -43,11 +44,11 @@
             <tr>
                 {% set repo_display_name = '/'.join(project[0].rstrip('/').split('://', 1)[-1].split('/', 2)[-2:]) %}
                 <td style="vertical-align: middle;"><a href="{{ project[0] }}" target="_blank">{{ repo_display_name }}</a></td>
-                <td style="vertical-align: middle;">{{ project[1][:7] }}</td>
-                <td style="vertical-align: middle;" class="time-col">{{ project[2] }}</td>
+                <td style="vertical-align: middle;">{{ project[2][:7] }}</td>
+                <td style="vertical-align: middle;" class="time-col">{{ project[3] }}</td>
                 <td style="vertical-align: middle;">
-                    {% set project_running = user.running and loop.index == loop.length %}
-                    {% set project_active = user.spawner.active and loop.index == loop.length %}
+                    {% set project_running = loop.index == loop.length and user.running %}
+                    {% set project_active = loop.index == loop.length and user.spawner.active %}
                     {% set project_not_active = user.spawner._stop_pending or (user.spawner.active and loop.index != loop.length) %}
                     {% if project_running %}
                     {# last element in projects is currently running, add Stop button for it #}
@@ -55,16 +56,17 @@
                     {% endif %}
                     {# add launch button for each element, if user has no server running #}
                     {# if last element is running, hide launch buttons of all other elements #}
-                    <a role="button" id="launch-{{ project[1] }}"
+                    <a role="button" id="launch-{{ project[2] }}"
                        class="project-launch btn btn-sm {% if project_active %}btn-primary{% else %}btn-warning{% endif %}{% if project_not_active %} hidden{% endif %}"
                        href="{% if project_active %}{{ url }}{% else %}#{% endif %}"
-                       data-last="{{ project[2] }}"
+                       data-url="{{ project[0] }}"
                        style="vertical-align: top;">
                        {% if project_active %}My Server{% else %}Launch{% endif %}
                     </a>
-                    <a role="button" id="delete-{{ project[1] }}"
+                    <a role="button" id="delete-{{ project[2] }}"
                        class="project-delete btn btn-sm btn-danger{% if user.spawner.active %} hidden{% endif %}"
                        href="#" title="Delete from projects list and persistent storage"
+                       data-url="{{ project[0] }}"
                        data-name="{{ repo_display_name }}"
                        data-toggle="modal" data-target="#delete-project">
                        Delete
@@ -74,9 +76,10 @@
             {% endfor %}
          </tbody>
      </table>
+    <span class="no-projects{% if projects %} hidden{% endif %}">You have no projects.</span>
     </div>
   </div>
-  <!-- Modal -->
+  {# Modal for project deletion dialog #}
   <div class="modal fade" id="delete-project" tabindex="-1" role="dialog" aria-labelledby="delete-project-label">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -88,7 +91,7 @@
           <span id="delete-project-text">Are you sure that you want to delete the project?</span>
           <br>
           <label style="font-weight: normal;"><input type="checkbox" id="delete-on-disk"> Delete the project also on my persistent storage.</label>
-          <input type="hidden" id="delete-ref" value=""/>
+          <input type="hidden" id="delete-url" value=""/>
           <input type="hidden" id="delete-id" value=""/>
           <input type="hidden" id="delete-name" value=""/>
         </div>
@@ -102,23 +105,19 @@
     </div>
   </div>
 </div>
-{% endif %}
 
 <div id="main" class="container">
-  <div class="row form-group"></div>
-  <div class="row form-group"></div>
+  <div class="row form-group no-projects{% if projects %} hidden{% endif %}"></div>
+  <div class="row form-group no-projects{% if projects %} hidden{% endif %}"></div>
   <div class="row">
-{#    <div class="col-lg-10 col-lg-offset-1">#}
     <div class="col-lg-12">
     {% block binder_form %}
-    <form id="build-form" class="form jumbotron">
+    <form id="build-form" class="form jumbotron" style="margin-bottom: 0px;">
         <h4 id="form-header" class='row'>Build and launch a new repository</h4>
         <input type="hidden" id="provider_prefix" value="gh"/>
-        <input type="hidden" id="user_options" value="?run-nbgitpuller=True"/>
         <div class="form-group row">
-          <label for="repository">GitHub repo or Gist name or GitLab.com URL</label>
+          <label for="repository">Git repository URL (github.com, gitlab.com or self-host)</label>
           <div class="input-group">
-            <input class="form-control" type="text" id="repository" data-lpignore="true" placeholder="GitHub repository name or link"/>
             <div class="input-group-btn" id="url-type-btn">
               <button type="button" class="btn btn-secondary dropdown-toggle"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
@@ -133,16 +132,18 @@
                 <li class="dropdown-item" value="gh"><a href="#">GitHub</a></li>
                 <li class="dropdown-item" value="gist"><a href="#">Gist</a></li>
                 <li class="dropdown-item" value="gl"><a href="#">GitLab.com</a></li>
-                  {# FIXME Git repo option is removed, because it requeires commit hash but we force it to be master always #}
-{#                <li class="dropdown-item" value="git"><a href="#">Git repository</a></li>#}
+                <li class="dropdown-item" value="git"><a href="#">Git repository</a></li>
+{#                <li class="dropdown-item" value="zenodo"><a href="#">Zenodo DOI</a></li>#}
+{#                <li class="dropdown-item" value="figshare"><a href="#">Figshare DOI</a></li>#}
               </ul>
             </div>
+            <input class="form-control" type="text" id="repository" data-lpignore="true" placeholder="GitHub repository name or link"/>
           </div>
         </div>
         <div class="form-row row">
           <div class="form-group col-md-4">
             <label for="ref">Git branch, tag, or commit</label>
-            <input class="form-control" type="text" id="ref" placeholder="master" value="master" readonly/>
+            <input class="form-control" type="text" id="ref" placeholder="master"/>
           </div>
           <div class="form-group col-md-6">
             <label for="filepath"></label>
@@ -247,12 +248,35 @@
     {% endblock binder_form %}
     </div>
   </div>
-</div>
+  {% block how_it_works %}
+  <div id="how-it-works" style="font-weight: normal;">
+    <h3 class="text-center" style="font-size: 32px;">How it works</h3>
 
+    <div class="row" style="margin: 16px;">
+      <div class="col-md-1 col-md-offset-2 point-container">
+        <span class="point" style="border-color: #58748f; color: #58748f;">1</span>
+      </div>
+      <div class="col-md-7 front">
+        <span class="front-em">Build repositories like <a href="http://mybinder.org">mybinder.org</a></span><br />
+          Enter your repository information in the <a href="https://mybinder.readthedocs.io/en/latest/introduction.html">Binder form</a>. We build and launch your <a href="https://notebooks.gesis.org/gallery/">binder-ready</a> repository so that you can interact with it just like on <a href="https://binderhub.readthedocs.io/en/latest/known-deployments.html">any other</a> Binder deployment. Once a repository has been launched it will be added to the list of <i>your projects</i>.
+      </div>
+    </div>
+
+    <div class="row" style="margin: 16px;">
+      <div class="col-md-1 col-md-offset-2 point-container">
+        <span class="point" style="border-color: #ff6100; color: #ff6100;">2</span>
+      </div>
+      <div class="col-md-7 front">
+        <span class="front-em">Persist <i>/projects</i> like a <a href="https://github.com/jupyter/docker-stacks/issues/358#issuecomment-288844834">Jovyan</a></span><br />
+          You are not just a visitor, but a true resident on <a href="https://jupyter.org/">Jupyter</a>. Your projects have a persistent <i>$HOME</i> directory whose contents are mirrored at <i>/projects</i>. Use the buttons in the table to <i>launch</i>, <i>stop</i> or <i>delete</i> an existing project. The <a href="https://github.com/gesiscss/data_science_image">data science image</a> can be your place to begin. To update a project-image use the Binder form and for files use <i>git</i>. You can launch one project at a time and have up to {{ projects_limit }} projects in total.
+      </div>
+    </div>
+  </div>
+  {% endblock how_it_works %}
+</div>
 {% endblock %}
 
 {% block script %}
-
 <script type="text/javascript">
 
 require(["jquery", "jhapi", "moment"], function($, JHAPI, moment) {
@@ -262,6 +286,7 @@ require(["jquery", "jhapi", "moment"], function($, JHAPI, moment) {
   var user = window.jhdata.user;
   var api = new JHAPI(base_url);
 
+  // Customize stop server button
   $("#stop").click(function() {
     $(this).text('Stopping')
            .attr("disabled", true)
@@ -281,6 +306,7 @@ require(["jquery", "jhapi", "moment"], function($, JHAPI, moment) {
     });
   });
 
+  // nice formatting for "Last used" column in projects table
   // copied from admin.js
   $(".time-col").map(function (i, el) {
     // convert ISO datestamps to nice momentjs ones
@@ -293,30 +319,27 @@ require(["jquery", "jhapi", "moment"], function($, JHAPI, moment) {
 
 
 $(document).ready(function() {
-
-    var PROJECTS = {};
-    for (const p of {{ projects|safe }}) {
-        PROJECTS[p[1]] = {url: p[0].toLowerCase()};  // p[1] is commit hash
-    }
-    Object.freeze(PROJECTS);
-
+    // Project launch through table
     $('.project-launch').click(function(e) {
+        // if server is running, this button holds the url of server
+        // if server is not running, do following
         if ($(this).attr('href') === '#') {
             e.preventDefault();
             $("#build-form").get(0).scrollIntoView();
             // fill the binder form with values of selected repo and submit
             var ref = $(this).prop('id').replace("launch-","");
-            var repo_url = PROJECTS[ref].url;
+            var repo_url = $(this).data('url');
+            var repo_url_lower = repo_url.toLowerCase();
             var provider_prefix;
             var provider_prefix_selected;
-            if (repo_url.indexOf('github.com') !== -1 && repo_url.indexOf('gist.github.com') === -1) {
+            if (repo_url_lower.indexOf('github.com') !== -1 && repo_url_lower.indexOf('gist.github.com') === -1) {
                provider_prefix = 'gh';
                provider_prefix_selected = 'GitHub';
-            } else if (repo_url.indexOf('gitlab.com') !== -1) {
+            } else if (repo_url_lower.indexOf('gitlab.com') !== -1) {
                // gitlab.com
                provider_prefix = 'gl';
                provider_prefix_selected = 'GitLab.com';
-            } else if (repo_url.indexOf('gist.github.com') !== -1) {
+            } else if (repo_url_lower.indexOf('gist.github.com') !== -1) {
                // gist.github.com
                provider_prefix = 'gist';
                provider_prefix_selected = 'Gist';
@@ -329,12 +352,6 @@ $(document).ready(function() {
             $('#ref').val(ref);
             $('#repository').val(repo_url);
             $('#filepath').val('');
-            if ($(this).data('last').toLowerCase() === "never") {
-                // if never launched (default repo)
-                $('#user_options').val('?run-nbgitpuller=True');
-            } else {
-                $('#user_options').val('?run-nbgitpuller=False');
-            }
             $('button#submit').trigger('click');
             // hide all launch and delete buttons
             $('.project-launch').addClass('hidden');
@@ -343,6 +360,7 @@ $(document).ready(function() {
         }
     });
 
+    // Project deletion
     $('.project-delete').on('click', function (event) {
         // reset parts of dialog
         $('#delete-project-body').children().removeClass("hidden");
@@ -352,32 +370,27 @@ $(document).ready(function() {
         $('#delete-project-success').text('').addClass("hidden");
         $('#delete-project-error').text('').addClass("hidden");
         // fill hidden inputs, they will be used in ajax call to delete project
-        var button = $(this);
-        var ref = button.prop('id').replace("delete-","");
-        $('#delete-ref').val(ref);  // to get repo url
-        $('#delete-id').val(button.prop('id'));  // this will be used success of ajax call to delete project row from table
-        var project_name = button.data('name');
+        $('#delete-url').val($(this).data('url'));
+        $('#delete-id').val($(this).prop('id'));  // this will be used success of ajax call to delete project row from table
+        var project_name = $(this).data('name');
         $('#delete-name').val(project_name);
         // update text in confirm dialog
         $('#delete-project-label').text('Delete project ' + project_name);
         $('#delete-project-text').text('Are you sure that you want to delete "' + project_name +'" project?');
     });
-
     $('#delete-confirm').on('click', function (event) {
-        var ref = $('#delete-ref').val();
-        var repo_url = PROJECTS[ref].url;
-        var data_to_send = JSON.stringify({repo_url: repo_url,
-                                         delete_on_disk: $('#delete-on-disk').prop("checked"),
-                                         name: $('#delete-name').val(),
-                                         id: $('#delete-id').val()});
-        var url = '/hub/delete_project';
-        console.log(ref, url, data_to_send);
+        var body = JSON.stringify({repo_url: $('#delete-url').val(),
+                                   delete_on_disk: $('#delete-on-disk').prop("checked"),
+                                   name: $('#delete-name').val(),
+                                   id: $('#delete-id').val()});
+        var user_name = window.jhdata.user;
+        var url = '/hub/api/projects/'+user_name;
+        console.log(url, body);
         $.ajax({
             url: url,
-            type: 'POST',
-            data: data_to_send,
-            success: function (json_response) {
-                var response = JSON.parse(json_response);
+            type: 'DELETE',
+            data: body,
+            success: function (response) {
                 if ("error" in response) {
                     // show error message
                     $('#delete-project-body').children().addClass("hidden");
@@ -395,11 +408,16 @@ $(document).ready(function() {
                     $('#delete-cancel').text("Okay");
                     $('#delete-confirm').addClass("hidden");
                     // reset hidden inputs
-                    $('#delete-ref').val('');
+                    $('#delete-url').val('');
                     $('#delete-name').val('');
                     $('#delete-id').val('');
                     //$('#delete-close').trigger('click');
                     $("#"+response["id"]).closest('tr').remove();
+                    if ($('#your-projects tr').length === 1) {
+                        // user has no projects, so remove empty projects table
+                        $('#your-projects').addClass("hidden");
+                        $('.no-projects').removeClass("hidden");
+                    }
                 }
                 },
             error: function () {
