--- a/persistent_storage/jupyterhub/templates/page.html
+++ b/persistent_storage/jupyterhub/templates/page.html
@@ -150,7 +150,7 @@
 
 {% block announcement %}
 {% if announcement %}
-<div class="container text-center announcement">
+<div class="container text-center announcement alert alert-warning">
   {{ announcement | safe }}
 </div>
 {% endif %}
